#50 fix: 긍정, 부정 리뷰 최대 3개까지 표출